# textual-chat

./: .gitignore  .pre-commit-config.yaml  AUTOCOMPLETE_FEATURE.md  IMPLEMENTATION_SUMMARY.md  INTERRUPT_IMPLEMENTATION.md  README.md  pyproject.toml  test_autocomplete.py  test_interrupt_hotkey.py  test_message_interrupt.py  test_message_queue.py  test_plan_pane.py
examples/: acp_chat.py  basic.py  chatbot_modal.py  chatbot_sidebar.py  context_window_demo.py  custom_model.py  echo_agent.py  in_larger_app.py  tool_agent.py  with_mcp.py  with_tabs.py  with_thinking.py  with_tools.py
src/textual_chat/: __init__.py  agent_manager.py  chat.py  db.py  events.py  llm.py  llm_adapter.py  llm_adapter_acp.py  llm_adapter_litellm.py  mcp_client.py  session_storage.py  slash_command.py  widgets.py
src/textual_chat/tools/: __init__.py  datatable.py  introspection.py
src/textual_chat/utils/: __init__.py  models.py
src/textual_chat/widgets/: __init__.py  agent_select.py  chat_input.py  message.py  model_select.py  permission_prompt.py  plan_pane.py  session_prompt.py  slash_command_autocomplete.py
tests/: conftest.py  test_autocomplete.py  test_initial_messages.py  test_interrupt_hotkey.py  test_message_interrupt.py  test_message_queue.py  test_plan_pane.py
