[project]
name = "textual-chat"
version = "0.1.2"
description = "LLM chat for humans. AI in your Textual app in a few lines."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["textual", "tui", "llm", "chat", "ai"]
dependencies = [
    "textual>=0.85.0",
    "litellm>=1.0.0",
    "httpx>=0.27.0",
    "textual-golden",
    "agent-client-protocol>=0.7.0",
    "textual-autocomplete>=3.0.0",
]

[tool.uv.sources]
textual-golden = { path = "../textual-golden", editable = true }

[project.optional-dependencies]
mcp = [
    "fastmcp>=2.0.0",
]
acp = [
    "agent-client-protocol>=0.6.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "fastmcp>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/textual_chat"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "fastmcp>=2.0.0",
    "black>=24.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
disallow_any_explicit = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true
